# ASL-to-Text

./: .gitignore  GUI.ipynb  GetDataset.py  README.md  pyproject.toml  requirements.txt
notebooks/: GetDataset.py  Training.ipynb
scripts/: collect_data.py  run_app.py  train_model.py
src/asl_to_text/: __init__.py  data_collection.py  hands.py  labels.py  predictor.py  preprocessing.py  training.py
src/asl_to_text/gui/: __init__.py  main.py
